Update plugin and Gradle configurations; enhance compatibility and add service registrations

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -23,10 +23,20 @@
     <!-- Product and plugin compatibility requirements.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
     <depends>com.intellij.modules.platform</depends>
+    <depends>com.intellij.modules.lang</depends>
+    <depends>com.intellij.modules.java</depends>
 
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
-
+        <!-- Register as application service to store settings -->
+        <applicationService serviceImplementation="tech.zimin.neonbrackets.neonbrackets.NeonBracketsFactory" />
+        <editorFactoryListener implementation="tech.zimin.neonbrackets.neonbrackets.NeonBracketsEditorListener"/>
     </extensions>
+    
+    <!-- Register component to initialize the highlighting pass -->
+    <projectListeners>
+        <listener class="tech.zimin.neonbrackets.neonbrackets.NeonBracketsInitializer"
+                  topic="com.intellij.openapi.project.ProjectManagerListener"/>
+    </projectListeners>
 </idea-plugin>
