Enhance plugin compatibility by making Java module optional and adding support for Rider IDE

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -24,7 +24,10 @@
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
     <depends>com.intellij.modules.platform</depends>
     <depends>com.intellij.modules.lang</depends>
-    <depends>com.intellij.modules.java</depends>
+    <!-- Make java module optional to support Rider and other IDEs -->
+    <depends optional="true">com.intellij.modules.java</depends>
+    <!-- Add Rider module support -->
+    <depends optional="true">com.intellij.modules.rider</depends>
 
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
