Remove redundant sub package

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -29,10 +29,10 @@
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
         <!-- Register as application service to store settings -->
-        <applicationService serviceImplementation="tech.zimin.neonBrackets.neonBrackets.NeonBracketsFactory" />
+        <applicationService serviceImplementation="tech.zimin.neonBrackets.NeonBracketsFactory" />
         <editorFactoryListener implementation="tech.zimin.neonBrackets.listeners.NeonBracketsEditorListener"/>
         <!-- Register startup activity -->
-        <postStartupActivity implementation="tech.zimin.neonBrackets.neonBrackets.NeonBracketsInitializer"/>
+        <postStartupActivity implementation="tech.zimin.neonBrackets.NeonBracketsInitializer"/>
         <!-- Register settings page -->
         <applicationConfigurable parentId="tools"
                                 instance="tech.zimin.neonBrackets.settings.NeonBracketsSettingsComponent"/>
@@ -41,7 +41,7 @@
     <!-- Register actions -->
     <actions>
         <action id="tech.zimin.neonBrackets.ToggleNeonBracketsAction" 
-                class="tech.zimin.neonBrackets.neonBrackets.ToggleNeonBracketsAction"
+                class="tech.zimin.neonBrackets.ToggleNeonBracketsAction"
                 text="Toggle Neon Brackets"
                 description="Toggle Neon Brackets highlighting on/off">
             <add-to-group group-id="EditMenu" anchor="last"/>
